Update gitignore to deal with npm matching bug.

--- a/.gitignore
+++ b/.gitignore
@@ -7,15 +7,21 @@
 *.keytab
 *.kt64
 *-sa.json
-docs/
-deploy/
-dist/
-@Compiled/
+*.code-workspace
 rollup.*
 .dbeaver-data-sources.xml
 coverage/
-*.code-workspace
+coverage/**/*
+docs/
+docs/**/*
+deploy/
+deploy/**/*
+dist/
+dist/**/*
 .husky/
+.husky/**/*
+@Compiled/
+@Compiled/**/*
 
 #IIS/IISNode
 iisnode
