Add badges, update docs.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "url": "https://github.com/appku/stashku/issues"
     },
     "author": "Append Media, LLC",
-    "license": "SEE LICENSE IN LICENSE",
+    "license": "MS-PL",
     "keywords": [
         "stashku",
         "log",
